# yaba

./: .gitignore  LICENSE  README.md
db/: create_yaba_tables_categories_accounts.sql
docs/db/: yabadb_ERD.drawio  yabadb_conceptual.drawio
docs/ui/: yaba_index_ui.drawio
yaba/: .env  Cargo.toml  Rocket.toml  diesel.toml  private.pem  public.pem
yaba/migrations/2024-12-03-181530_yaba/: down.sql  up.sql
yaba/src/: main.rs  model.rs  models.rs  schema.rs
yaba/webpages/: index.css  index.html  login.css  login.html
yaba/webpages/templates/: index.html  login.html
