[package]
name = "yaba"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
diesel = { version = "2", features = ["numeric", "time"] }
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
time = "0.3.36"
bigdecimal = "0.4.5"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_mysql"]

