[package]
name = "yaba"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets"] }
diesel = { version = "2", features = ["numeric", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"] }
openssl = "0.10.68"
#FIXME:DEL OR UNCOMMENTsha256 = "1.5.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_mysql"]

